--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,24 +4,30 @@
 # links. Removing a link prevents it from showing in the header, but does not
 # prevent it from being included in the site.
 
+# main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  # - title: "Publications"
+    # url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  # - title: "Talks"
+   # url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+ # - title: "Teaching"
+  #  url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  # - title: "Portfolio"
+   # url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+   # url: /year-archive/
     
-  - title: "CV"
+  - title: "Honors & Academics"
     url: /cv/
+
+  - title: "Projects"
+    url: /projects/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+   # url: /markdown/
+  
+  
